<resources>
    <string name="app_name">MyLOG</string>
    <string name="toast_requires_permission">This application requires permission %s</string>
    <string name="Back_button_label">ADD</string>
    <string name="init_text">place_name</string>
    <string name="description_text">description</string>
    <string name="sort">並び替え</string>
    <string name="sort_of_date">DATE</string>
    <string name="sort_of_name">NAME</string>
    <string name="sort_of_type">TYPE</string>

</resources>
