<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="jp.ac.titech.itpro.sdl.mylog.MainActivity">

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
    </fragment>

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="2">

            <EditText
                android:id="@+id/input_place_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:textSize="20sp"
                android:hint="@string/init_text"
                android:inputType="text"/>

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />


            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_gravity="right"
                android:text="@string/Back_button_label"
                android:onClick="pushButton"/>

        </LinearLayout>

        <EditText android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="20sp"
            android:hint="@string/description_text"
            android:inputType="text" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ListView
                android:id="@+id/place_List"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@color/white">
                <requestFocus />
            </ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="5">

                <TextView
                    android:id="@+id/sorttext"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_weight="6"
                    android:layout_gravity="center"
                    android:text="@string/sort"/>

                <RadioGroup
                    android:id="@+id/RadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center">

                    <RadioButton android:text="@string/sort_of_date"
                        android:id="@+id/RadioButton1"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content">
                    </RadioButton>
                    <RadioButton android:text="@string/sort_of_name"
                        android:id="@+id/RadioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </RadioButton>
                    <RadioButton android:text="@string/sort_of_type"
                        android:id="@+id/RadioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </RadioButton>

                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
